added local storage ability for text

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <div class="grid-item time" id="time9AM">
         <p>9AM</p>
       </div>
-      <div class="grid-item block" id="block9AM">
-        <textarea></textarea>
+      <div class="grid-item block">
+        <textarea id="9AM"></textarea>
       </div>
-      <div class="grid-item save" id="save9AM">
+      <div class="grid-item save 9AM" id="save9AM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -47,9 +47,9 @@
         <p>10AM</p>
       </div>
       <div class="grid-item block" id="block10AM">
-        <textarea></textarea>
+        <textarea id="10AM"></textarea>
       </div>
-      <div class="grid-item save" id="save10AM">
+      <div class="grid-item save 10AM" id="save10AM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -57,9 +57,9 @@
         <p>11AM</p>
       </div>
       <div class="grid-item block" id="block11AM">
-        <textarea></textarea>
+        <textarea id="11AM"></textarea>
       </div>
-      <div class="grid-item save" id="save11AM">
+      <div class="grid-item save 11AM" id="save11AM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -67,9 +67,9 @@
         <p>12PM</p>
       </div>
       <div class="grid-item block" id="block12PM">
-        <textarea></textarea>
+        <textarea id="12PM"></textarea>
       </div>
-      <div class="grid-item save" id="save12PM">
+      <div class="grid-item save 12PM" id="save12PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -77,9 +77,9 @@
         <p>1PM</p>
       </div>
       <div class="grid-item block" id="block1PM">
-        <textarea></textarea>
+        <textarea id="1PM"></textarea>
       </div>
-      <div class="grid-item save" id="save1PM">
+      <div class="grid-item save 1PM" id="save1PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -87,9 +87,9 @@
         <p>2PM</p>
       </div>
       <div class="grid-item block" id="block2PM">
-        <textarea></textarea>
+        <textarea id="2PM"></textarea>
       </div>
-      <div class="grid-item save" id="save2PM">
+      <div class="grid-item save 2PM" id="save2PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -97,9 +97,9 @@
         <p>3PM</p>
       </div>
       <div class="grid-item block" id="block3PM">
-        <textarea></textarea>
+        <textarea id="3PM"></textarea>
       </div>
-      <div class="grid-item save" id="save3PM">
+      <div class="grid-item save 3PM" id="save3PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -107,9 +107,9 @@
         <p>4PM</p>
       </div>
       <div class="grid-item block" id="block4PM">
-        <textarea></textarea>
+        <textarea id="4PM"></textarea>
       </div>
-      <div class="grid-item save" id="save4PM">
+      <div class="grid-item save 4PM" id="save4PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
@@ -117,15 +117,13 @@
         <p>5PM</p>
       </div>
       <div class="grid-item block" id="block5PM">
-        <textarea></textarea>
+        <textarea id="5PM"></textarea>
       </div>
-      <div class="grid-item save" id="save5PM">
+      <div class="grid-item save 5PM" id="save5PM">
         <span class="oi oi-lock-locked"></span>
       </div>
 
-
     </section>
-
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
