--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">myTest</p>
     </header>
 
     <section class="container">
@@ -36,7 +36,7 @@
       <div class="grid-item time" id="time9AM">
         <p>9AM</p>
       </div>
-      <div class="grid-item block">
+      <div class="grid-item block" id="block9AM">
         <textarea id="9AM"></textarea>
       </div>
       <div class="grid-item save 9AM" id="save9AM">
